--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
+    "vuetify": "^3.4.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -26,7 +27,8 @@
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-vuetify": "~2.5.8"
   },
   "eslintConfig": {
     "root": true,
