--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
+    "echarts": "^4.9.0",
     "pinia": "^2.1.7",
+    "v-charts": "^1.19.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.4.6",
     "vuex": "^4.0.0"
@@ -20,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/chart.js": "^2.9.41",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
