--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "magic_post",
-  "version": "0.1.0",
-  "private": true,
+  "name": "devfolio",
+  "version": "0.0.1",
+  "description": "Developer portfolio in Vue.js and Bootstrap 5",
+  "main": "index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && cp CNAME dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2",
-    "core-js": "^3.8.3",
-    "pinia": "^2.1.7",
-    "vue": "^3.2.13",
-    "vue-axios": "^3.5.2",
-    "vue-router": "^4.0.3",
-    "vuetify": "^3.4.6",
-    "vuex": "^4.0.0"
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.2.0",
+    "core-js": "^3.24.1",
+    "vue": "^3.2.37",
+    "vue-meta": "^3.0.0-alpha.10",
+    "vue-router": "^4.1.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "axios": "^1.6.2",
-    "axios-mock-adapter": "^1.22.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-vuetify": "~2.5.8"
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.3.0",
+    "prettier": "^2.7.1",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xtenzQ/xtenzQ.github.io.git"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+  "keywords": [
+    "portfolio",
+    "devfolio"
+  ],
+  "author": "Nikita Rusetskii",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/xtenzQ/xtenzQ.github.io/issues"
+  },
+  "homepage": "https://github.com/xtenzQ/xtenzQ.github.io#readme"
 }
