--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,25 +2,33 @@
   "name": "devfolio",
   "version": "0.0.1",
   "description": "Developer portfolio in Vue.js and Bootstrap 5",
-  "main": "index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && cp CNAME dist",
     "lint": "vue-cli-service lint"
   },
+  "main": "index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@mdi/font": "5.9.55",
+    "@vue/compiler-dom": "^3.3.12",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
+    "chart.js": "^4.4.1",
     "core-js": "^3.24.1",
+    "roboto-fontface": "*",
     "vue": "^3.2.37",
+    "vue-chartjs": "^5.3.0",
     "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.1.4",
-    "vuex": "^4.0.2"
+    "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -29,12 +37,14 @@
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "eslint": "^8.22.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.8",
     "sass": "^1.54.5",
-    "sass-loader": "^13.0.2"
+    "sass-loader": "^13.0.2",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
