--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
+    "morgan": "^1.10.0",
     "rand-token": "^1.0.1",
     "randomstring": "^1.3.0"
   },
