--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@mdi/font": "5.9.55",
     "@vue/compiler-dom": "^3.3.12",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^4.4.1",
     "core-js": "^3.24.1",
+    "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-chartjs": "^5.3.0",
