--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.2.37",
     "vue-chartjs": "^5.3.0",
     "vue-meta": "^3.0.0-alpha.10",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.1.4",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.2",
