--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-chartjs": "^5.3.0",
+    "vue-html-to-paper": "^2.0.3",
     "vue-meta": "^3.0.0-alpha.10",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.1.4",
