--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.2.0",
     "chart.js": "^4.4.1",
     "core-js": "^3.24.1",
+    "jspdf": "^2.5.1",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
